--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_icons-fa.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_icons-fa.scss
@@ -30,6 +30,7 @@ $icon-sort-asc: \f0de;
 $icon-sort-desc: \f0dd;
 $icon-spinner: \f110;
 $icon-star: \f005;
+$icon-thumb: \f164;
 $icon-windows: \f17a;
 $icon-world: \f0ac;
 $icon-x: \f00d;
@@ -57,4 +58,8 @@ $icon-youtube: \f16a;
 
 .fa-angle-up:before, .dropdown-visible .caret .fa-sort-down:before {
 	content: unicode($icon-chevron-up);
+}
+
+.icon.thanks-icon:before {
+	content: unicode($icon-thumb);
 }
