Possible final header adjustments

--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_header.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_header.scss
@@ -141,7 +141,7 @@ $transform: color 0.3s ease-in-out, transform 0.8s ease-in-out;
 			}
 		}
 		.dropdown {
-			top: 34px;
+			top: 35px;
 			min-width: 200px;
 			.dropdown-contents {
 				max-height: none;
@@ -152,9 +152,6 @@ $transform: color 0.3s ease-in-out, transform 0.8s ease-in-out;
 		}
 		.dropdown-visible .menu-label .fa-chevron-down {
 			transform: rotate(180deg);
-		}
-		#notification_list {
-			top: 35px;
 		}
 	}
 	.user-menu {
@@ -168,6 +165,7 @@ $transform: color 0.3s ease-in-out, transform 0.8s ease-in-out;
 	}
 	&.sticky {
 		background: rgba($color-05, 1.0);
+		box-shadow: 0 4px 8px 0 rgba($color-02, .25);
 		.site-logo-text {
 			margin: 0 20px 0 0;
 			@include toggle-content(show);
