--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_responsive.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_responsive.scss
@@ -296,7 +296,7 @@
 		.menu .dropdown, .menu .search-box, .user-menu .dropdown {
 			@include position($right: 0, $left: 0);
 		}
-		.menu .dropdown, .menu #notification_list, .user-menu .logged-in-info .dropdown {
+		.menu .dropdown, .user-menu .logged-in-info .dropdown {
 			top: 73px;
 		}
 		.user-menu .dropdown-container .dropdown-contents .linked-account-title,
@@ -309,7 +309,7 @@
 			min-width: 1px;
 		}
 		&.sticky {
-			.menu .dropdown, .menu #notification_list, .user-menu .logged-in-info .dropdown {
+			.menu .dropdown, .user-menu .logged-in-info .dropdown {
 				top: 80px;
 			}
 		}
@@ -1944,5 +1944,30 @@
 	}
 	.online .postprofile dt.has-avatar .avatar-container {
 		margin-top: 0;
+	}
+
+	// header.scss
+	.navbar {
+		.wrapper {
+			display: block;
+			padding: 0;
+		}
+		.site-logo-text, .mobile-menu-button {
+			padding: 0 20px;
+		}
+		.site-logo-text {
+			font-size: rem(26px);			
+		}
+		&.sticky {
+			.site-logo-text {
+				border-bottom: 1px solid mix($color-02, $color-04, 50%);
+				padding-bottom: 10px;
+				margin: 0;
+			}
+			.mobile-menu-button {
+				padding-top: 10px;
+				border-top: 1px solid $color-04;
+			}
+		}
 	}
 }
