--- a/khyeras/_dev/styles/khyeras_v1/template/custom/header_menu_01.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/custom/header_menu_01.html
@@ -9,6 +9,9 @@
 				<li>
 					<a href="{ROOT_PATH}rules" title="Rules" role="menuitem"><span>Rules</span></a>
 				</li>
+				<li>
+					<a href="{ROOT_PATH}managing-your-account" title="Managing Your Account" role="menuitem"><span>Managing Your Account</span></a>
+				</li>
 				<!-- IF not S_IS_BOT and (S_DISPLAY_MEMBERLIST or U_TEAM) -->
 					<!-- IF U_TEAM -->
 						<li>
