--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_other-sections.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_other-sections.scss
@@ -248,6 +248,14 @@ dl.faq + .top {
 	padding: 20px 0 0 0;
 }
 
+.content-image {
+	margin: 20px 0 0 0;
+	img {
+		padding: 5px;
+		border: 1px solid $color-04;
+	}
+}
+
 .key {
 	list-style: none;
 	margin-left: 0;
