--- a/khyeras/styles/khyeras_v1/template/custom/header_menu_01.html
+++ b/khyeras/styles/khyeras_v1/template/custom/header_menu_01.html
@@ -12,6 +12,12 @@
 				<li>
 					<a href="{ROOT_PATH}managing-your-account" title="Managing Your Account" role="menuitem"><span>Managing Your Account</span></a>
 				</li>
+				<li>
+					<a href="{ROOT_PATH}game-faq" title="Game FAQ" role="menuitem"><span>Game FAQ</span></a>
+				</li>
+				<li>
+					<a href="{U_FAQ}" title="{L_FORUM} {L_FAQ}" role="menuitem"><span>{L_FORUM} {L_FAQ}</span></a>
+				</li>
 				<!-- IF not S_IS_BOT and (S_DISPLAY_MEMBERLIST or U_TEAM) -->
 					<!-- IF U_TEAM -->
 						<li>
@@ -24,9 +30,6 @@
 						<a href="{U_CONTACT_US}" title="{L_CONTACT_US}" role="menuitem"><span>{L_CONTACT_US}</span></a>
 					</li>
 				<!-- ENDIF -->
-				<li>
-					<a href="{U_FAQ}" title="{L_FORUM} {L_FAQ}" role="menuitem"><span>{L_FORUM} {L_FAQ}</span></a>
-				</li>
 			</ul>
 		</div>
 	</li>
