--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_base.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_base.scss
@@ -28,7 +28,7 @@ img {
 }
 
 h1, h2, h3, h4, h5, h6, p, figure, pre, code, dl {
-    margin: 0 0 20px 0;
+	margin: 0 0 20px 0;
 }
 
 ul, ol {
@@ -41,7 +41,7 @@ ul, ol {
 		}
 	}
 	&.lower-alpha {
-		list-style-type: lower-alpha;	
+		list-style-type: lower-alpha;
 	}
 }
 
@@ -85,6 +85,19 @@ pre code, code pre {
 	padding: 0;
 	margin: 0;
 	border: 0;
+}
+
+.codebox {
+	margin: 0 0 20px 0;
+	& > p, pre {
+		margin: 0;
+	}
+	& > p {
+		margin: 0;
+		padding: 10px 20px;
+		background: $color-04;
+		color: $color-01;
+	}
 }
 
 blockquote {
