--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_viewtopic.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_viewtopic.scss
@@ -137,8 +137,12 @@
 		}
 		.bbcode-center {
 			text-align: center;
+			display: block;
 			img {
 				margin: 0 auto;
+			}
+			& + br + br {
+				display: none;
 			}
 		}
 	}
