Add strike bbcode style, update custom bbcode icons

--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_icons-fa.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_icons-fa.scss
@@ -1,6 +1,7 @@
 /* Font Awesome Icon Variables
 ========================================================================== */
 
+$icon-align-center: \f037;
 $icon-check: \f00c;
 $icon-check-circle: \f058;
 $icon-chevron-down: \f078;
@@ -30,6 +31,7 @@ $icon-sort-asc: \f0de;
 $icon-sort-desc: \f0dd;
 $icon-spinner: \f110;
 $icon-star: \f005;
+$icon-strikethrough: \f0cc;
 $icon-thumb: \f164;
 $icon-windows: \f17a;
 $icon-world: \f0ac;
