--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_viewtopic.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_viewtopic.scss
@@ -135,6 +135,9 @@
 				font-size: rem(13px);
 			}
 		}
+		.strike-through {
+			text-decoration: line-through;
+		}
 		.bbcode-center {
 			text-align: center;
 			display: block;
