Update getting started page and navigation

--- a/khyeras/_dev/styles/khyeras_v1/template/custom/header_menu_01.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/custom/header_menu_01.html
@@ -13,7 +13,7 @@
 					<a href="{ROOT_PATH}managing-your-account" title="Managing Your Account" role="menuitem"><span>Managing Your Account</span></a>
 				</li>
 				<li>
-					<a href="{ROOT_PATH}game-faq" title="Game FAQ" role="menuitem"><span>Game FAQ</span></a>
+					<a href="{ROOT_PATH}getting-started" title="Getting Started" role="menuitem"><span>Getting Started</span></a>
 				</li>
 				<li>
 					<a href="{U_FAQ}" title="{L_FORUM} {L_FAQ}" role="menuitem"><span>{L_FORUM} {L_FAQ}</span></a>
