--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_variables.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_variables.scss
@@ -16,6 +16,7 @@ $mcp: section-mcp;
 /* Colors
 ========================================================================== */
 
+$color-00: #ededed; // very light gray
 $color-01: #ffffff; // white
 $color-02: #000000; // black
 $color-03: #090909; // blackish
