--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_header.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_header.scss
@@ -22,6 +22,9 @@
 		align-content: center;
 		height: 100%;
 		@include position($type: relative, $z: 2);
+		&, a {
+			color: $color-01;
+		}
 		.site-description, .site-quotes {
 			@include flex;
 			max-width: 310px;
@@ -36,9 +39,6 @@
 				font-size: rem(100px);
 				font-variant: normal;
 				text-shadow: 2px 2px 0 rgba($color-02, 0.65);
-				a:hover {
-					color: $color-01;
-				}
 			}
 			h3 {
 				font-family: $font-02;
@@ -108,11 +108,11 @@ $transform: color 0.3s ease-in-out, transform 0.8s ease-in-out;
 		align-items: center;
 	}
 	a {
-		color: $color-01;
+		color: $color-00;
 	}
 	a, .icon.fa-chevron-down {
 		&:hover {
-			color: $color-06;
+			color: $color-07;
 		}
 	}
 	.site-logo-text {
@@ -253,6 +253,12 @@ $transform: color 0.3s ease-in-out, transform 0.8s ease-in-out;
 	.header, .footer {
 		background: $color-04;
 		font-size: rem(15px);
+		&, a {
+			color: $color-01;
+		}
+		a:hover {
+			color: $color-07;
+		}
 	}
 	.header .header_settings, ul li {
 		font-size: rem(13px);
@@ -422,7 +428,7 @@ $transform: color 0.3s ease-in-out, transform 0.8s ease-in-out;
 				display: block;
 				border: 10px solid rgba($color-02, 0.30);
 				overflow: hidden;
-				color: $color-01;
+				color: $color-00;
 				&:hover {
 					color: $color-07;
 					img {
@@ -497,7 +503,7 @@ $transform: color 0.3s ease-in-out, transform 0.8s ease-in-out;
 		left: 0;
 		box-shadow: 7px 0 5px -2px rgba($color-02, 0.35);
 	}
-	a {
+	&, a {
 		color: $color-01;
 	}
 	&, ul {
