--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_viewtopic.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_viewtopic.scss
@@ -49,7 +49,7 @@
 		padding: 10px;
 		border-radius: 3px;
 		&, a {
-			color: $color-08
+			color: $color-08;
 		}
 		a:hover {
 			color: $color-07;
