--- a/khyeras/styles/khyeras_v1/template/custom/extra_breadcrumbs.html
+++ b/khyeras/styles/khyeras_v1/template/custom/extra_breadcrumbs.html
@@ -12,7 +12,7 @@
 {% endmacro %}
 
 {% set about_crumbs = [ 'app/rules', 'app/managing-your-account', 'app/getting-started' ] %}
-{% set lore_crumbs = [ 'app/history', 'app/timeline', 'app/glossary', 'app/magic' ] %}
+{% set lore_crumbs = [ 'app/history', 'app/short-history', 'app/timeline', 'app/glossary', 'app/magic' ] %}
 
 {% set first_crumb = '' %}
 
